Make sure horizontal scrolling is not possible

--- a/assets/styles/tiger.css
+++ b/assets/styles/tiger.css
@@ -5,6 +5,7 @@
 
 body {
   overflow-x: hidden;
+  width: 100%;
 }
 
 .navbar-brand-logo {
